# twitter_validate_approvals

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
resources/: CHALLENGE.md
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_dependencies.py  test_utils.py
validate_approvals/: __main__.py  cli.py  core.py  dependencies.py  utils.py
