[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "validate_approvals"
version = "0.0.1"
description = "Twitter Code Challenge"
authors = ["John Doe"]  # poetry doesn't like empty strings here

[tool.poetry.scripts]
validate_approvals = 'validate_approvals.cli:run'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^6.0"
pytest-cov = "^2.10.0"
black = "^19.10b0"
isort = "^5.6.4"
autoflake = "^1.4"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
known_third_party = ["pytest"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
log_cli = true
log_cli_level = "INFO"
